Criado: Seção sobre + Footer

--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
         </a>
       </h1>
 
-      <nav class="navbar">
+      <nav class="navbar" id="home">
         <ul>
           <li><a href="#home">Home</a></li>
-          <li><a href="#portfolio">Portfólio</a></li>
+          <li><a href="#sobre">Sobre</a></li>
+          <li><a href="https://flpdev.vercel.app/" target="_blank">Portfólio</a></li>
           <li><a class="button-nav" href="https://github.com/flimamcz" target="_blank">
               <img src="assets/icons/icon-git.svg" alt="icone do github">
               <span>Github</span>
@@ -87,7 +88,31 @@
       </div>
     </section>
 
+    <section class="artigo" id="sobre">
+      <h1 class="title">Sobre mim & Estudos</h1>
+
+      <div class="container-artigo">
+        <article class="card-artigo">
+          <h2>Meu aprendizado</h2>
+          <p>Atualmente graduando em Engenharia de software e claro, cursando desenvolvimento na <span>trybe</span>.
+            Estudo desenvolvimento de forma ativa, em busca das melhores soluções. Desejo me torna um desenvolvedor
+            full-stack com ênfase em Front-end. Busco colaborar em projetos open-source, projetos para ong's entre
+            outras ações.</p>
+        </article>
+
+        <aside class="card-artigo">
+          <h2>Sobre mim</h2>
+          <p>
+            Como tido lá em cima, me chamo Filipe, tenho 20 anos. Amo assistir séries/filmes de ação. Curto de tudo um pouco (música), curto muito exercício físico e jogo alguns games, conecta comigo no <a href="https://www.linkedin.com/in/flima01/" target="_blank">linkedin</a> pra gente se conhecer mais :)
+          </p>
+        </aside>
+      </div>
+    </section>
   </main>
+
+  <footer id="rodape">
+    <p>Desenvolvido com carinho &#9829;	 <a href="https://github.com/flimamcz" target="_blank">Filipe</a></p>
+  </footer>
 
 </body>
 
