Finalizado: Projeto V-1.0 finalizado.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <h1 class="title">Sobre mim & Estudos</h1>
 
       <div class="container-artigo">
-        <article class="card-artigo">
+        <article class="card-artigo lado-esquerdo">
           <h2>Meu aprendizado</h2>
           <p>Atualmente graduando em Engenharia de software e claro, cursando desenvolvimento na <span>trybe</span>.
             Estudo desenvolvimento de forma ativa, em busca das melhores soluções. Desejo me torna um desenvolvedor
@@ -100,18 +100,64 @@
             outras ações.</p>
         </article>
 
-        <aside class="card-artigo">
+        <aside class="card-artigo lado-direito">
           <h2>Sobre mim</h2>
           <p>
-            Como tido lá em cima, me chamo Filipe, tenho 20 anos. Amo assistir séries/filmes de ação. Curto de tudo um pouco (música), curto muito exercício físico e jogo alguns games, conecta comigo no <a href="https://www.linkedin.com/in/flima01/" target="_blank">linkedin</a> pra gente se conhecer mais :)
+            Como dito na intro, me chamo Filipe, tenho 20 anos. Amo assistir séries/filmes de ação. Curto de tudo um
+            pouco(música), curto muito exercício físico e jogo alguns games, conecta comigo no <a
+              href="https://www.linkedin.com/in/flima01/" target="_blank">linkedin</a> pra nós se conhecer mais :)
           </p>
         </aside>
       </div>
     </section>
+
+    <table class="tabela">
+      <thead>
+        <tr>
+          <th>Linguagens</th>
+          <th>Ferramentas</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <tr>
+          <td>HTML</td>
+          <td>Vscode</td>
+        </tr>
+
+
+        <tr>
+          <td>Css</td>
+          <td>Git</td>
+        </tr>
+
+        <tr>
+          <td>Sass</td>
+          <td>Github</td>
+        </tr>
+
+        <tr>
+          <td>JavaScript</td>
+          <td>Vercel</td>
+        </tr>
+
+        <tr>
+          <td>ReactJs</td>
+          <td>Figma</td>
+        </tr>
+
+        <tr>
+          <td>Nodejs</td>
+          <td>AdobeXd</td>
+        </tr>
+      </tbody>
+
+
+    </table>
   </main>
 
   <footer id="rodape">
-    <p>Desenvolvido com carinho &#9829;	 <a href="https://github.com/flimamcz" target="_blank">Filipe</a></p>
+    <p>Desenvolvido com carinho &#9829; <a href="https://github.com/flimamcz" target="_blank">Filipe</a></p>
   </footer>
 
 </body>
